# xgress

./: .gitignore  README.md  index.html  pyproject.toml  tsconfig.json
src/: app.tsx
src/components/: Labels.tsx  Links.tsx  Namespaces.tsx  NetworkGraph.css  NetworkGraph.tsx  Nodes.tsx
src/data/: graph.ts  types.ts
view/: .eslintrc  index.html  package.json  tsconfig.json  vite.config.ts
view/src/: app.css  app.tsx  main.tsx
view/src/components/: Labels.tsx  Links.tsx  Namespaces.tsx  NetworkGraph.tsx  Nodes.tsx
view/src/data/: types.ts
xgress/: __main__.py
